--- a/app/src/main/res/layout/activity_lista_alunos.xml
+++ b/app/src/main/res/layout/activity_lista_alunos.xml
@@ -20,4 +20,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <TextView
+        android:id="@+id/activity_lista_alunos_text_vazio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </RelativeLayout>
