Adicionando internacionalização no strings.xml para en-US e referênciando as strings do layout.

--- a/app/src/main/res/layout/activity_formulario_aluno.xml
+++ b/app/src/main/res/layout/activity_formulario_aluno.xml
@@ -5,7 +5,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <EditText
@@ -13,24 +13,27 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:hint="Nome"
-            android:inputType="textCapWords" />
+            android:hint="@string/formulario_hint_nome"
+            android:inputType="textCapWords"
+            android:importantForAutofill="no" />
 
         <EditText
             android:id="@+id/activity_formulario_aluno_telefone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:hint="Telefone"
-            android:inputType="phone" />
+            android:hint="@string/formulario_hint_telefone"
+            android:inputType="phone"
+            android:importantForAutofill="no" />
 
         <EditText
             android:id="@+id/activity_formulario_aluno_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:hint="E-mail"
-            android:inputType="textEmailAddress" />
+            android:hint="@string/formulario_hint_e_mail"
+            android:inputType="textEmailAddress"
+            android:importantForAutofill="no" />
 
     </LinearLayout>
 </ScrollView>
