--- a/app/src/main/res/layout/item_aluno.xml
+++ b/app/src/main/res/layout/item_aluno.xml
@@ -20,7 +20,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:drawableLeft="@drawable/ic_item_aluno_telefone"
+            android:drawableStart="@drawable/ic_item_aluno_telefone"
             tools:text="Telefone" />
 
 </LinearLayout>
