--- a/app/src/main/res/menu/activity_formulario_aluno_menu.xml
+++ b/app/src/main/res/menu/activity_formulario_aluno_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:title="Salvar aluno"
+    <item android:title="@string/botao_salvar_aluno"
         android:id="@+id/activity_formulario_aluno_salvar"
         android:icon="@drawable/ic_action_salvar_aluno"
         app:showAsAction="always"/>
