--- a/app/src/main/res/menu/activity_lista_alunos_menu.xml
+++ b/app/src/main/res/menu/activity_lista_alunos_menu.xml
@@ -4,6 +4,6 @@
 
     <item
         android:id="@+id/activity_lista_alunos_menu_remover"
-        android:title="Remover"/>
+        android:title="@string/lista_alunos_menu_remover"/>
 
 </menu>
